clusters/ramona/external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.13.4
          args:
            - --source=service
            - --provider=google
            - --google-zone-visibility=public
            - --registry=txt
          volumeMounts:
            - name: secret-volume
              mountPath: /etc/secrets/google-credentials/
              readOnly: true
      volumes:
        - name: secret-volume
          secret:
            secretName: google-credentials
