clusters/ramona/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: whoami-service
    namespace: default
    # annotations:
      # service.beta.kubernetes.io/vultr-loadbalancer-protocol: "http"
      # external-dns.alpha.kubernetes.io/hostname: ramona.fun
spec:
    selector:
        name: whoami
    ports:
        - name: http
          port: 80
          targetPort: 8080
